--- a/viz.yaml
+++ b/viz.yaml
@@ -71,6 +71,18 @@ publish:
     publisher: page
     depends:
       lib_d3_js: "lib-d3-js"
+      map: "build_map"
+      map_utils: "map_utils"
+      conus_map_geojson: "conus_map_geojson"
     context:
-      resources: ["lib_d3_js"]
-      sections: []
+      resources: ["lib_d3_js", 
+                  "map_utils"]
+      sections: ["map"] 
+  -
+    id: build_map
+    location: "js/build_map.js"
+    mimetype: application/javascript
+  -
+    id: map_utils
+    location: "js/map_utils.js"
+    mimetype: application/javascript
