--- a/viz.yaml
+++ b/viz.yaml
@@ -77,15 +77,20 @@ publish:
       header: "header-section"
       footer: "footer-section"
       map: "build_map"
+      timeslider: "timeslider"
       map_utils: "map_utils"
       conus_map_geojson: "conus_map_geojson"
     context:
       resources: ["lib_d3_js", "header_css", "footer_css", 
-                  "map_css", "map_utils"]
+                  "map_css", "map_utils", "timeslider"]
       sections: ["map"] # adding header and footer here, doubled each on the page
   -
     id: build_map
     location: "js/build_map.js"
+    mimetype: application/javascript
+  -
+    id: timeslider
+    location: "js/timeslider.js"
     mimetype: application/javascript
   -
     id: map_utils
