--- a/preprocessing_remake.yaml
+++ b/preprocessing_remake.yaml
@@ -5,24 +5,39 @@ packages:
 
 sources:
   - scripts/preprocess/fetch_s3_object.R
-  - scripts/process/clean_county_boundaries.R
-  - scripts/process/execute_shell_script.R
-  - scripts/publish/s3_object.R
+  - scripts/preprocess/clean_county_boundaries.R
+  - scripts/preprocess/execute_shell_script.R
+  - scripts/preprocess/push_s3_object.R
 
 targets:
   
   # --- parameter --- #
   
   s3bucket:
-    command: c("viz-water-use-15")
+    command: c(I("viz-water-use-15"))
   
   # --- fetch --- #
   
   cache/IPUMS_NHGIS_counties.zip:
-    command: fetch_s3_object(I("IPUMS_NHGIS_counties.zip"), "s3bucket", target_name)
+    command: fetch_s3_object(target_name, I("IPUMS_NHGIS_counties.zip"), s3bucket)
   
   # --- process --- #
   
+  cache/county_boundaries_geojson.zip:
+    command: clean_county_boundaries(target_name, "cache/IPUMS_NHGIS_counties.zip")
+  
+  cache/county_boundaries_topojson.zip:
+    command: execute_shell_script(target_name, I("scripts/preprocess/topo_county_boundaries.sh"))
+    depends:
+      - cache/county_boundaries_geojson.zip # had to include because it is not explicitly called out
+  
+  # --- publish --- #
+  
+  s3boundariesfile:
+    command: push_s3_object(I("county_boundaries_topojson.zip"), "cache/county_boundaries_topojson.zip", s3bucket)
+  
+  # --- final --- #
   
   preprocess:
-  
+    depends:
+      - s3boundariesfile
