--- a/viz.yaml
+++ b/viz.yaml
@@ -101,6 +101,7 @@ process:
       dict: states.json
     processor: extract_dict
     scripts: [scripts/process/extract_dict.R]
+    mimetype: application/json
   -
     id: counties_dictionary
     location: cache/counties.json
@@ -111,6 +112,17 @@ process:
       dict: counties.json
     processor: extract_dict
     scripts: [scripts/process/extract_dict.R]
+    mimetype: application/json
+  -
+    id: county_boundaries
+    location: cache/county_boundaries
+    depends:
+      zipfile: county_boundaries_topojson
+    process_args:
+      pattern: "*-quantized.json"
+    processor: extract_boundary_files
+    scripts: [scripts/process/extract_boundary_files.R]
+    mimetype: application/json
 
 visualize:
 
@@ -134,6 +146,9 @@ publish:
       map: "build_map"
       timeslider: "timeslider"
       state_boundaries_geojson: "state_boundaries_geojson"
+      states_dictionary: "states_dictionary"
+      counties_dictionary: "counties_dictionary"
+      county_boundaries: "county_boundaries"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "footer_css",
                   "map_css", "hashes", "map_utils", "map_counties", "timeslider"]
