--- a/preprocess.yaml
+++ b/preprocess.yaml
@@ -12,24 +12,23 @@ sources:
 
 targets:
   
-  # --- parameter --- #
-  
-  s3bucket:
-    command: c(I("viz-water-use-15"))
-  
   # --- fetch --- #
   
+  # takes about 12 minutes
   cache/IPUMS_NHGIS_counties.zip:
-    command: fetch_s3_object(target_name, I("IPUMS_NHGIS_counties.zip"), s3bucket)
+    command: fetch_s3_object(target_name, I("IPUMS_NHGIS_counties.zip"), I("viz-water-use-15"))
   
   # --- process --- #
   
+  # takes about 45 minutes & about 5.5 GB of disk space for all FIPS
   cache/county_boundaries_geojson.zip:
     command: clean_county_boundaries(target_name, "cache/IPUMS_NHGIS_counties.zip")
   
+  # takes about 30 seconds
   cache/state_fips.csv:
     command: save_state_fips(target_name, "cache/county_boundaries_geojson.zip", I("states.json"))
   
+  # takes about 10 minutes & about 3 GB of disk space for all FIPS
   cache/county_boundaries_topojson.zip:
     command: execute_shell_script(target_name, "cache/county_boundaries_geojson.zip", 
                                   I("scripts/preprocess/topo_county_boundaries.sh"),
@@ -37,9 +36,11 @@ targets:
     
   # --- publish --- #
   
+  # takes about 12 minutes
   s3boundariesfile:
     command: push_s3_object(I("county_boundaries_topojson.zip"), 
-                            "cache/county_boundaries_topojson.zip", s3bucket)
+                            "cache/county_boundaries_topojson.zip", 
+                            I("viz-water-use-15"))
   
   # --- final --- #
   
