--- a/viz.yaml
+++ b/viz.yaml
@@ -38,7 +38,9 @@ info:
     sf:
       repo: CRAN
       version: 0.6.0
-      
+    rjson:
+      repo: CRAN
+      version: 0.2.15
   contributors:
     -
       name: Lindsay Carr
@@ -167,6 +169,14 @@ process:
     processor: simplify_wu_data
     scripts: [scripts/process/simplify_wu_data.R]
   -
+    id: wu_data_15_json
+    location: cache/wu_data_15.json
+    mimetype: application/json
+    depends:
+      wu_data_15_simple: wu_data_15_simple
+    processor: json_wu_data
+    scripts: [scripts/process/json_wu_data.R]
+  -
     id: centroid_sizes
     location: cache/centroid_sizes.rds
     reader: rds
@@ -254,6 +264,7 @@ publish:
       counties_dictionary: "counties_dictionary"
       county_boundaries: "county_boundaries"
       county_centroids: "county_centroids_topojson"
+      wu_data_15_json: "wu_data_15_json"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "footer_css",
                   "map_css", "hashes", "projection", "map_utils", "map_counties", "timeslider"]
