--- a/viz.yaml
+++ b/viz.yaml
@@ -248,7 +248,6 @@ publish:
       map_utils: "map_utils"
       map_counties: "map_counties"
       map: "build_map"
-      timeslider: "timeslider"
       state_boundaries_geojson: "state_boundaries_geojson"
       states_dictionary: "states_dictionary"
       counties_dictionary: "counties_dictionary"
@@ -256,7 +255,7 @@ publish:
       county_centroids: "county_centroids_topojson"
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "footer_css",
-                  "map_css", "hashes", "projection", "map_utils", "map_counties", "timeslider"]
+                  "map_css", "hashes", "projection", "map_utils", "map_counties"]
       sections: ["map"] # adding header and footer here, doubled each on the page
   -
     id: county_boundaries
@@ -283,10 +282,6 @@ publish:
   -
     id: build_map
     location: "js/build_map.js"
-    mimetype: application/javascript
-  -
-    id: timeslider
-    location: "js/timeslider.js"
     mimetype: application/javascript
   -
     id: map_utils
