remove warning about building county_boundaries

--- a/viz.yaml
+++ b/viz.yaml
@@ -287,6 +287,8 @@ publish:
   -
     id: county_boundaries
     location: cache/county_boundaries
+    reader: folder
+    mimetype: filepath
     depends: 
       files_location: "county_boundaries_topojson"
     publish_args:
