Adding social icons (pre-embed pr)

--- a/viz.yaml
+++ b/viz.yaml
@@ -79,6 +79,12 @@ parameter:
     id: wu_type_column_names
     orig_names: ["TO-Wtotl", "PT-Wtotl", "PS-Wtotl", "IR-WFrTo", "IN-Wtotl"]
     new_names: ["total", "thermoelectric", "publicsupply", "irrigation", "industrial"]
+  - 
+    id: social-links
+    github: https://github.com/USGS-VIZLAB/water-use-15
+    twitter: https://twitter.com/share?url=TODO!!!
+    facebookLink: http://www.facebook.com/sharer.php?u=TODO!!!
+  
 
 fetch:
   -
@@ -265,11 +271,14 @@ publish:
     template: fullpage
     publisher: page
     depends:
+      sourcesansprofont: sourcesansprofont
       lib_d3_js: "lib-d3-js"
       topojson: "topojson"
       header_css: "lib-header-css"
       footer_css: "lib-footer-css"
       map_css: "map_css"
+      social: "social-section"
+      socialCSS: "lib-social-media-css"
       header: "header_section"
       footer: "footer_section"
       hashes: "url_hashes"
@@ -284,9 +293,9 @@ publish:
       county_centroids: "county_centroids_topojson"
       wu_data_15_json: "wu_data_15_json"
     context:
-      resources: ["lib_d3_js", "topojson", "header_css", "footer_css",
+      resources: ["lib_d3_js", "topojson", "header_css", "footer_css","socialCSS","sourcesansprofont",
                   "map_css", "hashes", "projection", "map_utils", "map_counties"]
-      sections: ["map"] # adding header and footer here, doubled each on the page
+      sections: ["social","map"] # adding header and footer here, doubled each on the page
   -
     id: county_boundaries
     location: cache/county_boundaries
@@ -326,6 +335,11 @@ publish:
     location: "layout/css/map.css"
     mimetype: text/css
   -
+    id: sourcesansprofont
+    publisher: googlefont
+    family: "Source Sans Pro"
+    weight: [300, 400, 600]
+  -
     id: header_section
     template: header-template
     publisher: header
@@ -342,3 +356,10 @@ publish:
       - name: Visualizing water use by region and time
         org: USGS-VIZLAB
         repo: water-use
+  -
+    id: social-section
+    template: vertical-social-media-template
+    publisher: social
+    depends: social-links
+
+
