--- a/viz.yaml
+++ b/viz.yaml
@@ -114,6 +114,7 @@ fetch:
       object_name: "county_boundaries_topojson.zip"
       bucket_name: "viz-water-use-15"
     reader: zip
+    mimetype: filepath
     fetcher: s3_object
     scripts: [scripts/fetch/s3_object.R]
   -
@@ -288,7 +289,7 @@ publish:
       state_boundaries_geojson: "state_boundaries_geojson"
       states_dictionary: "states_dictionary"
       counties_dictionary: "counties_dictionary"
-      county_boundaries: "county_boundaries"
+      county_boundaries: "county_boundaries_topojson3"
       county_centroids: "county_centroids_topojson"
       wu_data_15_json: "wu_data_15_json"
     context:
