--- a/viz.yaml
+++ b/viz.yaml
@@ -305,17 +305,6 @@ publish:
                   "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
       sections: ["social","map"] # adding header and footer here, doubled each on the page
   -
-    id: county_boundaries
-    location: cache/county_boundaries
-    reader: folder
-    mimetype: filepath
-    depends: 
-      files_location: "county_boundaries_topojson"
-    publish_args:
-      pattern: "*-quantized.json"
-    publisher: multiple_json_files
-    scripts: scripts/publish/multiple_json_files.R
-  -
     id: topojson
     location: "js/topojson.v1.min.js"
     mimetype: application/javascript
@@ -391,7 +380,7 @@ publish:
       state_boundaries_geojson: state_boundaries_geojson
       states_dictionary: states_dictionary
       counties_dictionary: counties_dictionary
-      county_boundaries: county_boundaries
+      county_boundaries: county_boundaries_topojson3
       county_centroids: county_centroids_topojson
       wu_data_15_json: wu_data_15_json
     context:
