--- a/viz.yaml
+++ b/viz.yaml
@@ -89,6 +89,16 @@ fetch:
     depends:
       spatial_metadata: spatial_metadata
     comment: sets up the basic view window and projection
+  - 
+    id: county_boundaries_topojson3
+    location: cache/county_boundaries_USA.json
+    fetch_args:
+      object_name: "county_boundaries_USA.json"
+      bucket_name: "viz-water-use-15"
+    reader: json
+    mimetype: application/json
+    fetcher: s3_object
+    scripts: [scripts/fetch/s3_object.R]
   -
     id: state_boundaries
     location: cache/state_boundaries.rds
@@ -133,17 +143,6 @@ fetch:
     scripts: [scripts/fetch/s3_object.R]
 
 process:
-  - 
-    id: county_boundaries_topojson3
-    location: cache/county_boundaries_USA.json
-    depends:
-      sp_object: county_boundaries_census
-    process_args:
-      script_file: scripts/process/simplify_topojson.sh
-    processor: simplify_topojson
-    scripts: scripts/process/simplify_topojson.R
-    reader: json
-    mimetype: application/json
   -
     id: state_boundaries_geojson
     location: cache/state_boundaries.geojson
