--- a/viz.yaml
+++ b/viz.yaml
@@ -141,7 +141,12 @@ fetch:
     reader: excel
     fetcher: s3_object
     scripts: [scripts/fetch/s3_object.R]
-
+  -
+    id: description_text_md
+    location: data/description_text.yaml
+    reader: md
+    mimetype: text/yaml
+    
 process:
   -
     id: state_boundaries_geojson
@@ -270,7 +275,7 @@ visualize:
       crs: "+init=epsg:2163"
     visualizer: make_circle_map
     scripts: [scripts/visualize/make_circle_map.R]
-
+    
 publish:
   -
     id: wateruse_page
@@ -286,6 +291,8 @@ publish:
       main_css: "main_css"
       social: "social-section"
       socialCSS: "lib-social-media-css"
+      description_text: "description_text"
+      directions_text: "directions_text"
       header: "header_section"
       footer: "footer_section"
       hashes: "url_hashes"
@@ -302,7 +309,7 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", "header_css", "footer_css", "socialCSS",
                   "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
-      sections: ["social","map"] # adding header and footer here, doubled each on the page
+      sections: ["social","map","description_text", "directions_text"] # adding header and footer here, doubled each on the page
   -
     id: topojson
     location: "js/topojson.v1.min.js"
@@ -376,6 +383,7 @@ publish:
       map_utils: map_utils
       map_counties: map_counties
       map: build_map
+      directions_text: directions_text
       state_boundaries_geojson: state_boundaries_geojson
       states_dictionary: states_dictionary
       counties_dictionary: counties_dictionary
@@ -385,5 +393,19 @@ publish:
     context:
       resources: ["lib_d3_js", "topojson", 
                   "map_css", "main_css", "hashes", "projection", "map_utils", "map_counties"]
-      embed: ["map"]
+      embed: ["map","directions_text"]
+  -
+    id: description_text
+    template: printall
+    publisher: section
+    depends: description_text_md
+    context:
+      text: description_text_md.description_text-markdown
+  -
+    id: directions_text
+    template: printall
+    publisher: section
+    depends: description_text_md
+    context:
+      text: description_text_md.directions_text-markdown
 
