--- a/viz.yaml
+++ b/viz.yaml
@@ -100,16 +100,15 @@ fetch:
     fetcher: s3_object
     scripts: [scripts/fetch/s3_object.R]
   -
-    id: state_boundaries
-    location: cache/state_boundaries.rds
-    reader: rds
-    fetcher: state_boundaries
+    id: state_boundaries_topojson
+    location: cache/state_boundaries_USA.json
     fetch_args:
-      database: state
-    scripts: [scripts/fetch/state_boundaries.R , scripts/fetch/utils.R]
-    depends:
-      viewbox: viewbox
-      states_dict: states_dictionary
+      object_name: "state_boundaries_USA.json"
+      bucket_name: "viz-water-use-15"
+    reader: json
+    mimetype: application/json
+    fetcher: s3_object
+    scripts: [scripts/fetch/s3_object.R]
   -
     id: county_boundaries_census
     location: cache/county_boundaries_census.zip
@@ -143,15 +142,6 @@ fetch:
     scripts: [scripts/fetch/s3_object.R]
 
 process:
-  -
-    id: state_boundaries_geojson
-    location: cache/state_boundaries.geojson
-    reader: json
-    processor: sf_to_geojson
-    scripts: [scripts/process/sf_to_geojson.R]
-    depends:
-      map_data: state_boundaries
-    mimetype: application/geo+json
   -
     id: states_dictionary
     location: cache/states.json
@@ -293,7 +283,7 @@ publish:
       map_utils: "map_utils"
       map_counties: "map_counties"
       map: "build_map"
-      state_boundaries_geojson: "state_boundaries_geojson"
+      state_boundaries: "state_boundaries_topojson"
       states_dictionary: "states_dictionary"
       county_boundaries: "county_boundaries_topojson3"
       county_centroids: "county_centroids_topojson"
@@ -375,7 +365,7 @@ publish:
       map_utils: map_utils
       map_counties: map_counties
       map: build_map
-      state_boundaries_geojson: state_boundaries_geojson
+      state_boundaries: state_boundaries_topojson
       states_dictionary: states_dictionary
       counties_dictionary: counties_dictionary
       county_boundaries: county_boundaries_topojson3
